--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "lucide-react": "^0.474.0",
     "nanoid": "^5.0.9",
     "next": "15.1.6",
+    "next-i18n-router": "^5.5.1",
     "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
