--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@upstash/redis": "^1.34.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "i18next": "^24.2.2",
+    "i18next-resources-to-backend": "^1.2.1",
     "lucide-react": "^0.474.0",
     "nanoid": "^5.0.9",
     "next": "15.1.6",
